--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^5.8.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "web-scraper-js": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
